# leiter

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  PLAN.md  README.md  SPEC.md  build.rs  cliff.toml  dist-workspace.toml
.github/workflows/: ci.yml  conventional-commit-pr-title.yml  release.yml
.m/: AGENTS.md  m.toml
.m/snippets.d/: conventional-commits.md  dprint.md  releasing.md  rust.md  spec-compliance.md  stdout-logging.md
docs/: e2e_testing.md  how-it-works.md  leiter_command_permissions.md  setup.md  usage.md
docs/experimental/: codex.md
release-notes/: 0.7.0.md
src/: config.rs  errors.rs  frontmatter.rs  log_filename.rs  main.rs  paths.rs  soul_validation.rs  templates.rs
src/codex/: meta.rs  mod.rs
src/commands/: agent_setup.rs  agent_uninstall.rs  config.rs  context.rs  distill.rs  instill.rs  log.rs  mark_distilled.rs  mod.rs  nudge.rs  session_end.rs  soul_show.rs  soul_upgrade.rs  stop_hook.rs  test_support.rs
tests/: cli.rs  integration.rs
tests/e2e/: harness.rs  main.rs
