[package]
name = "leiter"
version = "0.5.0"
edition = "2024"
homepage = "https://github.com/scode/leiter"
repository = "https://github.com/scode/leiter"
description = "A self-training system for Claude Code"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tempfile = "3"
thiserror = "2"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
e2e = []

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
